--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
   "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }],
+  "buildCommand": "CI=false GENERATE_SOURCEMAP=false npm run build",
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https:; connect-src 'self' https://api-consumet-org-8.onrender.com https://graphql.anilist.co"
+        }
+      ]
+    }
+  ]
 }
