--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
-  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }],
   "buildCommand": "CI=false GENERATE_SOURCEMAP=false npm run build",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
